--- a/app/src/main/res/layout/activity_row_layout.xml
+++ b/app/src/main/res/layout/activity_row_layout.xml
@@ -1,57 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:background="#A89E9E"
-    android:padding="6dip">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="6dip"
-        android:contentDescription="TODO"
-        android:src="@mipmap/ic_launcher" />
-
-    <TextView
-        android:id="@+id/secondLine"
-        android:layout_width="fill_parent"
-        android:layout_height="26dip"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/icon"
-        android:singleLine="true"
-        android:text="Description"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/firstLine"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_above="@id/secondLine"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/icon"
-        android:gravity="center_vertical"
-        android:text="Example application"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/thirdLine"
-        android:layout_width="58dp"
-        android:layout_height="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="19dp"
-        android:layout_toRightOf="@id/icon"
-        android:singleLine="true"
-        android:text="Precio"
-        android:textSize="12sp" />
+    >
 
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#F478A2"
+        android:orientation="horizontal">
+
+
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="6dip"
+            android:layout_marginBottom="7dp"
+            android:contentDescription="TODO"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/secondLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginBottom="8dp"
+            android:layout_toRightOf="@id/icon"
+            android:textStyle="bold"
+            android:singleLine="true"
+            android:text="Description"
+            android:textSize="17dp" />
+
+        <TextView
+            android:id="@+id/firstLine"
+            android:layout_width="144dp"
+            android:layout_height="104dp"
+            android:layout_above="@id/secondLine"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="16dp"
+            android:layout_toRightOf="@id/icon"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            android:text="Example application"
+            android:textSize="25dp" />
+
+        <TextView
+            android:id="@+id/thirdLine"
+            android:layout_width="79dp"
+            android:layout_height="47dp"
+            android:layout_above="@+id/secondLine"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="60dp"
+            android:textStyle="bold"
+            android:layout_marginBottom="24dp"
+            android:layout_toRightOf="@id/firstLine"
+            android:singleLine="true"
+            android:text="Precio"
+            android:textSize="20dp" />
+
+
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
