--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,8 +12,8 @@
         android:layout_width="351dp"
         android:layout_height="62dp"
         android:layout_marginTop="65dp"
-        android:text="LOGIN"
         android:gravity="center"
+        android:text="LOGIN"
         android:textColor="#F478A2"
         android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +36,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="84dp"
         android:hint="contraseña"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mailAdd" />
@@ -72,11 +73,11 @@
         android:layout_width="144dp"
         android:layout_height="73dp"
         android:layout_marginTop="30dp"
+        android:backgroundTint="#FCE4EC"
         android:text="Registrate"
+        android:textColor="#E91E63"
         android:textStyle="bold"
         app:cornerRadius="20dp"
-        android:textColor="#E91E63"
-        android:backgroundTint="#FCE4EC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
